Frontend_V2: Fix private tag overlap and column size on submissions page (#3674)

--- a/frontend_v2/src/app/components/challenge/challengesubmissions/challengesubmissions.component.scss
+++ b/frontend_v2/src/app/components/challenge/challengesubmissions/challengesubmissions.component.scss
@@ -116,33 +116,38 @@ tr.element-row:not(.expanded-row):active {
   flex-direction: row;
 }
 
-.elements-detail {
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-
-  border-right-style: solid;
-  border-right-width: 1px;
-  border-right-color: lightgrey;
-
-  padding-right: 80px;
+.elements-margin {
+  margin-left: 20px;
 }
 
-.elements-status {
+.elements-detail {
+  width: 38%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   border-right-style: solid;
   border-right-width: 1px;
   border-right-color: lightgrey;
-  padding: 0 20px;
+  margin-left: 30px;
 }
 
 .elements-action {
+  width: 30%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  margin-left: 40px;
+  margin-left: 30px;
+}
+
+.elements-status {
+  width: 30%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  border-right-style: solid;
+  border-right-width: 1px;
+  border-right-color: lightgrey;
+  margin-left: 30px;
 }
 
 .element {
